fixed styling on tasklist, stuck in fontawesome styling

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,7 +30,12 @@ form {
   margin: 10px 5px;
 }
 
-input {
+.input-checkbox {
+  width: 30px;
+  margin: 0;
+}
+
+.input-text {
   border: none;
   border-radius: 3px;
   font-size: 16px;
